# AReno

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  cpu_unit_tests.yml  modal_math_algorithms.yml  modal_train.yml  pr-style.yml  pre-commit.yml  publish-docs.yml  publish-pypi.yml
areno/: __init__.py
areno/accel/: __init__.py  _extension.py  activations.py  attention.py  conv.py  embedding.py  linear.py  moe.py  normalization.py  (+4 more)
ci/: modal_gsm8k_gspo.py
docs/: Makefile  conf.py  index.rst  requirements.txt
tests/: helpers.py  test_agentic_areno_target_reward_cpu.py  test_agentic_coding_cli_cpu.py  test_agentic_coding_example_cpu.py  test_agentic_coding_tools_cpu.py  test_agentic_cpu.py  test_agentic_shopping_example_cpu.py  test_algorithms_cpu.py  test_auto_tune_cpu.py  test_cli_diagnostics_cpu.py  test_cli_model_refs_cpu.py  test_config_data_cpu.py  test_import_boundaries_cpu.py  test_inference_scheduler_cpu.py  test_logprobs_cpu.py  test_losses_rewards_cpu.py  test_metrics_cpu.py  test_more_losses_cpu.py  test_protocol_cpu.py  test_recompute_cpu.py  test_registry_cpu.py  test_registry_discovery_cpu.py  test_runtime_utils_cpu.py  test_sampling_cpu.py  test_serve_cli_cpu.py  test_setup_guardrails_cpu.py  test_tokenizer_api_cpu.py  test_train_cli_config_cpu.py  test_trainer_api_cpu.py  test_trainer_dataset_utils_cpu.py
(+166 files in other folders)
